# Aliens_eye

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  IMPROVEMENTS.md  LICENSE  README.md  WORKING.md  aliens_eye.py  config.example.json  install.sh  pyproject.toml  requirements.sh  requirements.txt  sites.json  termux-install.sh  termux-uninstall.sh  uninstall.sh  usage
.github/workflows/: ci.yml  release.yml
core/: analyzer.py  browser.py  config.py  detector.py  exporter.py  features.py  fingerprints.py  http.py  rate_limit.py  scanner.py  variations.py
data/: fresh_dataset.csv
photos/: photos
src/aliens_eye/: __init__.py  __main__.py  cli.py  mcp_server.py  selfcheck.py
src/aliens_eye/core/: __init__.py  analyzer.py  browser.py  checkpoint.py  config.py  correlate.py  detector.py  domains.py  expand.py  exporter.py  features.py  fingerprints.py  http.py  pdf_report.py  rate_limit.py  report.py  scanner.py  variations.py  watch.py
src/aliens_eye/data/: keywords.json  model.json  nsfw_sites.json  seed_dataset.csv  selfcheck.json  site_profiles.json  sites.json
src/aliens_eye/ml/: __init__.py  collect.py  inference.py  label.py  train.py
src/aliens_eye/tui/: app.py
src/aliens_eye/utils/: __init__.py  console.py
tests/: conftest.py  test_analyzer.py  test_config_cli.py  test_detector.py  test_exporter.py  test_ml_inference.py  test_new_features.py  test_scanner.py  test_sites.py  test_train.py  test_variations.py
utils/: colors.py  logger.py
