[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aliens-eye"
version = "2.2.1"
description = "AI-powered OSINT username scanner across 800+ social media and web platforms"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aaron Thomas (arxhr007)" }]
keywords = ["osint", "username", "recon", "social-media", "security", "scanner"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "aiohttp>=3.8",
    "selectolax>=0.3.21",
    "rich>=13.7",
    "aiohttp-socks>=0.8,<1.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.42"]
train = ["scikit-learn>=1.3", "numpy>=1.24"]
correlate = ["Pillow>=10.0"]
tui = ["textual>=0.60"]
pdf = ["reportlab>=4.0"]
serve = ["mcp>=1.0"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "build",
    "twine",
]

[project.scripts]
aliens_eye = "aliens_eye.cli:main"

[project.urls]
Homepage = "https://github.com/arxhr007/Aliens_eye"
Repository = "https://github.com/arxhr007/Aliens_eye"
Issues = "https://github.com/arxhr007/Aliens_eye/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aliens_eye"]

[tool.hatch.build.targets.sdist]
include = ["src/aliens_eye", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
